<resources>
    <string name="app_name">Medmatch</string>
    <string name="dashboard">Dashboard</string>
    <string name="products">Products</string>
    <string name="inventory">Inventory</string>
    <string name="sales">Sales</string>
    <string name="more">More</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sales_activity">Sales Activity</string>
    <string name="inventory_summary">Inventory Summary</string>
    <string name="sign_up">Signup</string>
    <string name="welcome">Welcome</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="existing_user_get_started">Existing User / Get started</string>
    <string name="E">Enter Your Email</string>
    <string name="P">Enter Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="new_user_create_new_account">New user? Create new account</string>
    <string name="logo">logo</string>
    <string name="back">Back</string>
    <string name="please_log_into_your_account">Please log into your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="please_create_a_new_account">Please create a new account</string>
    <string name="username">Username</string>
    <string name="logout">Logout</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="pharse_1">Simplify Your Inventory: Keep track of your stock with ease and efficiency.</string>
    <string name="forgot_password">Forgot password</string>
    <string name="terms_and_condition">Terms and Condition</string>
    <string name="product_details">Product Details</string>
    <string name="low_stock_items">Low Stock Items</string>
    <string name="all_item_groups">All Item Groups</string>
    <string name="all_items">All Items</string>
    <string name="settings">Settings</string>
    <string name="icon">icon</string>
    <string name="todo">TODO</string>
    <string name="product_name">Product Name</string>
    <string name="product_price">Product Price</string>
    <string name="quantity">Quantity</string>
    <string name="update">Update</string>
    <string name="add">add</string>
    <string name="price_per_unit">Price Per Unit</string>
    <string name="owner_name">Owner Name</string>
    <string name="in_stock">In Stock</string>
    <string name="inventory_owner">Inventory Owner</string>
    <string name="invenory_id">Inventory ID</string>
    <string name="created_date">Created Date</string>
    <string name="inventory_name">Inventory Name</string>
    <string name="location">Location</string>
    <string name="setting">Setting</string>
    <string name="country">Country</string>
    <string name="inventory_n_management_n_system">Inventory \n Management \n System</string>
    <string name="notify">notify</string>
    <string name="edit_product">Edit Product</string>
    <string name="profile">Profile</string>
    <string name="users">Users</string>
    <string name="reset_password">Reset Password</string>
    <string name="no_data_available">No Data Available</string>
    <string name="role">Role</string>
    <string name="appicon">appicon</string>
    <string name="shop_name">Shop-Name</string>
    <string name="medicines">Medicines</string>
    <string name="enter_text">Enter text</string>
    <string name="explore">Explore</string>
    <string name="pharmacy">pharmacy</string>
    <string name="invoices">Invoices</string>
    <string name="invoice_detail">Invoice Detail</string>
    <string name="locate_shop">Locate Shop</string>
</resources>